--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon ./src/index.js"
+  },
+  "dependencies": {
+    "apollo-server-express": "^2.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "graphql": "^15.4.0",
+    "node-fetch": "^2.6.1"
   }
 }
